--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Subway Surfer Extension",
     "version": "1.0",
-    "description": "Play local video in a resizable popup window",
+    "description": "get brainrot to help you lock in",
     "permissions": [
       "windows"
     ],
